--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:layout_alignParentBottom="true"
         />
     
+    <Button 
+        android:id="@+id/button_done"
+        android:text="Done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
+        
 </RelativeLayout>
