--- a/res/layout/select_activity.xml
+++ b/res/layout/select_activity.xml
@@ -3,17 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >    
     
-    <GridView 
-        android:id="@+id/view_gridview"
+    <LinearLayout
+        android:id="@+id/view_gridframe"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        />
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button_upload"
+        android:layout_below="@+id/spinner_album" >
+
+        <GridView
+            android:id="@+id/view_gridview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="90dp"
+            android:gravity="center"
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp" >
+        </GridView>
+
+    </LinearLayout>
     
     <Button 
         android:id="@+id/button_login"
