--- a/res/layout/select_activity.xml
+++ b/res/layout/select_activity.xml
@@ -46,14 +46,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/view_loginframe"/>
+        android:layout_alignParentBottom="true"
+        />
     
     <Spinner 
         android:id="@+id/spinner_album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_saveLocal"
+        android:layout_below="@+id/view_loginframe"
+        android:layout_centerHorizontal="true"
         />
     
     <Button 
@@ -62,6 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_above="@+id/button_saveLocal"/>
 
 </RelativeLayout>
