--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,23 +8,25 @@
         android:id="@+id/previewFBC2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
         />
       
-    <Button 
+    <ImageButton
         android:id="@+id/button_capture"
-        android:text="Capture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="fitCenter"
+        android:background="@null"
         android:layout_alignParentBottom="true"
-        />
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/capture_icon_2" />
     
-    <Button 
+    <ImageButton 
         android:id="@+id/button_done"
-        android:text="Done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    	android:src="@drawable/done_button"
+    	android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
         
