--- a/res/layout/select_activity.xml
+++ b/res/layout/select_activity.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button_upload"
-        android:layout_below="@+id/spinner_album" >
+        android:layout_below="@+id/view_spinner" >
 
         <GridView
             android:id="@+id/view_gridview"
@@ -40,28 +40,43 @@
     </LinearLayout>
     
     
-    <Button 
+    <ImageButton 
         android:id="@+id/button_saveLocal"
-        android:text="Save Locally"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+		android:src="@drawable/save_local_button"
+    	android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         />
     
-    <Spinner 
-        android:id="@+id/spinner_album"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/view_loginframe"
-        android:layout_centerHorizontal="true"
-        />
+    <LinearLayout
+        android:id="@+id/view_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/view_loginframe" >
+
+        <TextView
+            android:id="@+id/text_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Album: " />
+
+	    <Spinner
+	        android:id="@+id/spinner_album"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" />
     
-    <Button 
+    </LinearLayout>
+    
+    <ImageButton 
         android:id="@+id/button_upload"
-        android:text="Upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+		android:src="@drawable/upload_icon"
+    	android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/button_saveLocal"/>
 
