--- a/res/layout/select_activity.xml
+++ b/res/layout/select_activity.xml
@@ -42,20 +42,22 @@
     
     <ImageButton 
         android:id="@+id/button_saveLocal"
-		android:src="@drawable/save_local_button"
+		android:src="@drawable/save_local_buttonx"
     	android:scaleType="fitCenter"
         android:background="@null"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:padding="5dp"
         />
     
     <LinearLayout
         android:id="@+id/view_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/view_loginframe" >
+        android:layout_height="70dp"
+        android:layout_below="@+id/view_loginframe"
+        android:padding="10dp" >
 
         <TextView
             android:id="@+id/text_select"
@@ -72,12 +74,13 @@
     
     <ImageButton 
         android:id="@+id/button_upload"
-		android:src="@drawable/upload_icon"
+		android:src="@drawable/upload_iconx"
     	android:scaleType="fitCenter"
         android:background="@null"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
+        android:padding="5dp"
         android:layout_above="@+id/button_saveLocal"/>
 
 </RelativeLayout>
